--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-    background-image: url("../clock/pic/new.jpg");
+    background-image: url("../ToDo/pic/new.jpg");
     background-size: auto;
     background-repeat: no-repeat;
 }
