--- a/style.css
+++ b/style.css
@@ -133,10 +133,10 @@ body {
     color: brown;
 }
 .listJob div p input{
-    margin-left: 15px;
+    margin-left: 9px;
 }
 .BtnDelete{
-    margin-left: 12px;
+    margin-left: 4px;
     
     height: 20px;
 }
@@ -144,6 +144,18 @@ body {
    border: 1px solid red;
    cursor: pointer;
 }
+
+/*-------- btn edit ---------*/
+.DoneEdit{
+    background-color: #b3e97e;
+    border: none;
+    cursor: pointer;
+    margin-left: 2px;
+}
+.DoneEdit:hover{
+    border: 1px solid #254902;
+}
+
 /*-------js ---------*/
 .activeDay {
     background-color: rgba(89, 117, 37, 0.39);
