--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
 }
 .BtnDelete{
     margin-left: 4px;
-    
+    margin-right: 5px;
     height: 20px;
 }
 .BtnDelete:hover{
@@ -162,7 +162,7 @@ body {
 }
 
 .listJob div p {
-    margin-left: 28px;
+    margin-left: 9px;
     /* margin-top: -20px; */
     font-size: 20px;
 }
