--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ body {
     margin-left: 9px;
     /* margin-top: -20px; */
     font-size: 20px;
+    opacity: 1 !important;
 }
  .listJobi input {
     display: inline;
@@ -230,3 +231,79 @@ body {
 .mondayclass {
     overflow-y: hidden;
 }
+
+/* add new feautur */ /* add new feautur */ /* add new feautur */ 
+
+/* ------------------my change ---------------*/
+.showList {
+    position: absolute;
+    bottom: 24px;
+    left: 31px;
+    border: 1px solid #9b3535;
+    padding: 9px;
+    font: icon;
+    cursor: pointer;
+}
+.showList:hover{
+    background-color: #460f0f46;
+}
+
+.opLess{
+    opacity: 0.4;
+}
+.pTask{
+    opacity: 1 !important;
+}
+
+/* ------------------my change END ---------------*/
+
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: rgba(17, 17, 17, 0.952); /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    margin-bottom : 27px;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
